--- a/src/app/component/producto/producto.admin.delete.routed/producto.admin.delete.routed.component.html
+++ b/src/app/component/producto/producto.admin.delete.routed/producto.admin.delete.routed.component.html
@@ -1,76 +1,60 @@
-<div class="container-fluid mt-5">
+<div class="container mt-5 d-flex align-items-center justify-content-center">
   <div class="row">
-    <div class="col-12">
-      <div class="card shadow-sm">
-        <div class="card-header bg-dark text-white text-center">
-          <h2 class="mb-0">
-            <i class="bi bi-trash"></i> Borrar Producto <i class="bi bi-person-circle"></i>
-          </h2>
+    <div class="col text-center">
+      <h2 class="my-2">
+        <i class="bi bi-trash"></i>
+        Eliminación de Producto
+        <i class="bi bi-box-seam"></i>
+      </h2>
+
+      <div class="row mt-4">
+        <div class="col-12 mb-2" *ngFor="let key of getProductoKeys()">
+          <label class="form-label fw-bold">{{ key }}</label>
+          <ng-container [ngSwitch]="key">
+            <textarea *ngSwitchCase="'observaciones'" class="form-control" [value]="oProducto?.[key]" disabled></textarea>
+            <textarea *ngSwitchCase="'descripcionTic'" class="form-control" [value]="oProducto?.[key]" disabled></textarea>
+            <div *ngSwitchCase="'imagenes'">
+              <label class="form-label fw-bold">Imágenes</label>
+              <div class="d-flex flex-wrap mt-3">
+                <div class="me-2 mb-2" *ngFor="let img of oProducto?.imagenes">
+                  <img [src]="img" width="100" height="100" class="rounded shadow border border-danger" />
+                </div>
+              </div>
+            </div>
+            <input *ngSwitchDefault class="form-control" [value]="oProducto?.[key]" disabled />
+          </ng-container>
         </div>
-        <div class="card-body">
-          <table class="table table-striped table-bordered my-5 text-center">
-            <tbody>
-              <tr class="text-center">
-                <th scope="row" class="bg-danger text-white text-end pe-5">Código</th>
-                <td class="text-start ps-5">{{ oProducto?.codigo }}</td> <!-- Uso del operador ? -->
-              </tr>
-              <tr class="text-center">
-                <th scope="row" class="bg-primary text-white text-end pe-5">Nombre</th>
-                <td class="text-start ps-5">{{ oProducto?.nombre }}</td>
-              </tr>
-            </tbody>
-          </table>
-          <div class="d-flex justify-content-center mt-4">
-            <p class="fs-3">¿Seguro que desea borrar el Producto?</p>
-          </div>
-          <div class="d-flex justify-content-center mt-4">
-            <button
-              class="btn btn-warning mt-4 mx-1"
-              [routerLink]="['/admin','producto', 'plist']"
-            >
-              <i class="bi bi-list"></i> Ir a listado de Productos
-            </button>
-            <button class="btn btn-danger mt-4 mx-1" (click)="deleteProducto()">
-              <i class="bi bi-trash"></i> Borrar Producto
-            </button>
-          </div>
-        </div>
+      </div>
+
+      <div class="d-flex justify-content-center mt-4">
+        <p class="fs-3">¿Seguro que desea borrar el Producto?</p>
+      </div>
+      <div class="d-flex justify-content-center mt-4">
+        <button class="btn btn-warning mt-4 mx-1" [routerLink]="['/admin','producto', 'plist']">
+          <i class="bi bi-list"></i> Ir a listado de Productos
+        </button>
+        <button class="btn btn-danger mt-4 mx-1" (click)="deleteProducto()">
+          <i class="bi bi-trash"></i> Borrar Producto
+        </button>
       </div>
     </div>
   </div>
+</div>
 
-  <div
-    class="modal fade"
-    [id]="'mimodal'"
-    tabindex="-1"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Mensaje</h5>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-            (click)="hideModal()"
-          ></button>
-        </div>
-        <div class="modal-body">
-          <p>{{ strMessage }}</p>
-        </div>
-        <div class="modal-footer">
-          <button
-            type="button"
-            class="btn btn-primary"
-            data-bs-dismiss="modal"
-            (click)="hideModal()"
-          >
-            Cerrar
-          </button>
-        </div>
+<div class="modal fade" [id]="'mimodal'" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Mensaje</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="hideModal()"></button>
+      </div>
+      <div class="modal-body">
+        <p>{{ strMessage }}</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="hideModal()">
+          Cerrar
+        </button>
       </div>
     </div>
   </div>
