--- a/src/app/component/producto/producto.admin.plist.routed/producto.admin.plist.routed.component.html
+++ b/src/app/component/producto/producto.admin.plist.routed/producto.admin.plist.routed.component.html
@@ -1,139 +1,173 @@
-<div class="container mt-5 d-flex align-items-center justify-content-center">
+<div class="container mt-5">
   <div class="row">
-    <div class="col text-center">
-      <h2 class="my-2">
-        <i class="bi bi-list"></i>
-        Lista de Productos
-        <i class="bi bi-person-circle"></i>
+    <div class="col">
+      <h2 class="mb-4 text-center">
+        <i class="bi bi-list"></i> Lista de Productos
       </h2>
-      <a href="/admin/producto/create"><button class="btn btn-primary my-2 mx-2">
-          <i class="bi bi-plus-square"></i>
-          Crear nuevo producto
-        </button></a>
 
-      <div class="d-inline-flex mx-2">
-        <input type="text" class="form-control" placeholder="Buscar" (keyup)="filter($event)" [(ngModel)]="strFiltro" />
+      <div class="mb-3 d-flex justify-content-between align-items-center flex-wrap gap-2">
+        <a routerLink="/admin/producto/create" class="btn btn-primary">
+          <i class="bi bi-plus-square"></i> Crear nuevo producto
+        </a>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Buscar"
+          (keyup)="filter($event)"
+          [(ngModel)]="strFiltro"
+        />
       </div>
 
-      <div class="d-inline-flex mx-2">
-        <nav class="my-4">
-          <ul class="pagination justify-content-center">
-            <li class="page-item" [class.active]="nRpp === 10">
-              <a class="page-link" (click)="goToRpp(10)" href="#">10</a>
-            </li>
-            <li class="page-item" [class.active]="nRpp === 50">
-              <a class="page-link" (click)="goToRpp(50)" href="#">50</a>
-            </li>
-            <li class="page-item" [class.active]="nRpp === 100">
-              <a class="page-link" (click)="goToRpp(100)" href="#">100</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-
-      <nav class="my-2">
-        <ul class="pagination justify-content-center">
-          <li class="page-item">
-            <a class="page-link" [class.disabled]="nPage - -1 === 1" (click)="goToPrev()" href="#">
-              Anterior
-              <i class="bi bi-caret-left-square-fill"></i>
-            </a>
-          </li>
-
-          <li class="page-item" *ngFor="let pag of arrBotonera">
-            @if(pag==='...'){
-            <a class="page-link">{{ pag }}</a>
-            } @else {
-            <a class="page-link" href="#" (click)="goToPage(-(-pag))" [class.active]="nPage - -1 === -(-pag)">
-              {{ pag }}
-            </a>
-            }
-          </li>
-
-          <li class="page-item">
-            <a class="page-link" [class.disabled]="nPage - -1 === oPage?.totalPages" (click)="goToNext()" href="#">
-              <i class="bi bi-caret-right-square-fill"></i>
-              Siguiente</a>
-          </li>
-        </ul>
-      </nav>
-
-      <div class="d-flex justify-content-between">
-        @if (strFiltro.length>0) {
-        <h5 class="text-muted">
-          Filtrado por: <span class="text-danger">{{ strFiltro }}</span>
-        </h5>
-        } @else{
-        <h5 class="text-muted">Sin filtrar</h5>
-        }
-        <h5 class="text-muted">
-          Mostrando {{ oPage?.numberOfElements | number : "1.0-0" }} de
-          {{ oPage?.totalElements | number : "1.0-0" }}
-        </h5>
-      </div>
-
-      <div class="d-flex flex-column">
-        <table class="table table-striped table-bordered my-8"
-          style="table-layout: fixed; width: 100%; word-break: break-all">
+      <div class="table-container">
+        <table class="table table-striped table-bordered mb-0">
           <thead>
             <tr>
-              <th (click)="sort('codigo')" class="bg-danger text-white">
-                Código @if (strField === 'codigo') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
-              <th (click)="sort('nombre')" class="bg-primary text-white">
-                Nombre @if (strField === 'nombre') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
-              <th (click)="sort('tipoproducto')" class="bg-primary text-white">
-                Tipo de Producto @if (strField === 'tipoproducto') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
-              <th class="bg-warning text-black">Acciones</th>
+              <th>ID</th>
+              <th>Descripción</th>
+              <th>Descripción TIC</th>
+              <th>Departamento</th>
+              <th>Familia</th>
+              <th>Subfamilia</th>
+              <th>Marca</th>
+              <th>Unidad de Medida</th>
+              <th>Cantidad</th>
+              <th>Centralizado</th>
+              <th>Apeso</th>
+              <th>Unidad Caja</th>
+              <th>Unidad Servicio</th>
+              <th>PK</th>
+              <th>Cajas Capa</th>
+              <th>Cajas Palet</th>
+              <th>Proveedor</th>
+              <th>Referencia Proveedor</th>
+              <th>EAN</th>
+              <th>EAN C</th>
+              <th>EAN P</th>
+              <th>Largo</th>
+              <th>Ancho</th>
+              <th>Alto</th>
+              <th>Peso</th>
+              <th>Días Caducidad</th>
+              <th>ARA CEN</th>
+              <th>IVA</th>
+              <th>Precio Venta</th>
+              <th>PVP HOM</th>
+              <th>PVP AND</th>
+              <th>PVP CAT</th>
+              <th>Precio Tarifa</th>
+              <th>PRO FAC</th>
+              <th>Precio Neto</th>
+              <th>PRO FFAC</th>
+              <th>PRO NETON</th>
+              <th>ART MKD</th>
+              <th>Articulo Sustituido</th>
+              <th>Insertado por</th>
+              <th>Actualizado por</th>
+              <th>Status</th>
+              <th>Observaciones</th>
+              <th>Partida Arancelaria</th>
+              <th>PVP MEL</th>
+              <th>País Origen</th>
+              <th>Acciones</th>
             </tr>
           </thead>
-
           <tbody>
-            @for (producto of oPage?.content; track producto.codigo) {
-            <tr>
-              <td class="text-center">{{ producto.codigo }}</td>
-              <td class="text-start">{{ producto.nombre }}</td>
-              <td class="text-start">
-                @if (producto.tipoproducto) {
-                  {{ producto.tipoproducto.descripcion }} ID: {{ producto.tipoproducto.id }}
-                } @else {
-                  <span class="text-muted">Sin tipo de producto asignado</span>
-                }
-              </td>
-             
+            <tr *ngFor="let producto of oPage?.content">
+              <td>{{ producto.id }}</td>
+              <td>{{ producto.descripcion }}</td>
+              <td>{{ producto.descripcionTic }}</td>
+              <td>{{ producto.departamento }}</td>
+              <td>{{ producto.familia }}</td>
+              <td>{{ producto.subfamilia }}</td>
+              <td>{{ producto.marca }}</td>
+              <td>{{ producto.unidadDeMedida }}</td>
+              <td>{{ producto.cantidad }}</td>
+              <td>{{ producto.centralizado }}</td>
+              <td>{{ producto.apeso }}</td>
+              <td>{{ producto.unidadDeCaja }}</td>
+              <td>{{ producto.unidadDeServicio }}</td>
+              <td>{{ producto.pk }}</td>
+              <td>{{ producto.cajasCapa }}</td>
+              <td>{{ producto.cajasPalet }}</td>
+              <td>{{ producto.proveedor }}</td>
+              <td>{{ producto.referenciaProveedor }}</td>
+              <td>{{ producto.ean }}</td>
+              <td>{{ producto.ean_c }}</td>
+              <td>{{ producto.ean_p }}</td>
+              <td>{{ producto.largo }}</td>
+              <td>{{ producto.ancho }}</td>
+              <td>{{ producto.alto }}</td>
+              <td>{{ producto.peso }}</td>
+              <td>{{ producto.diasCaducidad }}</td>
+              <td>{{ producto.ara_cen }}</td>
+              <td>{{ producto.iva }}</td>
+              <td>{{ producto.precioVenta }}</td>
+              <td>{{ producto.pvp_hom }}</td>
+              <td>{{ producto.pvp_and }}</td>
+              <td>{{ producto.pvp_cat }}</td>
+              <td>{{ producto.precioTarifa }}</td>
+              <td>{{ producto.pro_fac }}</td>
+              <td>{{ producto.precioNeto }}</td>
+              <td>{{ producto.pro_ffac }}</td>
+              <td>{{ producto.pro_neton }}</td>
+              <td>{{ producto.art_mkd }}</td>
+              <td>{{ producto.articuloSustituido }}</td>
+              <td>{{ producto.insertedBy }}</td>
+              <td>{{ producto.updateBy }}</td>
+              <td>{{ producto.status }}</td>
+              <td>{{ producto.observaciones }}</td>
+              <td>{{ producto.partidaArancelaria }}</td>
+              <td>{{ producto.pvp_mel }}</td>
+              <td>{{ producto.paisOrigen }}</td>
               <td>
-                <div class="btn-group" role="group" aria-label="Basic example">
-                  <button type="button" class="btn btn-success" (click)="view(producto)">
-                    <i class="bi bi-eye icon-15"></i>
+                <div class="btn-group btn-group-sm">
+                  <button class="btn btn-success" (click)="view(producto)">
+                    <i class="bi bi-eye"></i>
                   </button>
-                  <button type="button" class="btn btn-warning icon-15" (click)="edit(producto)">
-                    <i class="bi bi-pen"></i>
+                  <button class="btn btn-warning" (click)="edit(producto)">
+                    <i class="bi bi-pencil-square"></i>
                   </button>
-                  <button type="button" class="btn btn-danger icon-15" (click)="remove(producto)">
+                  <button class="btn btn-danger" (click)="remove(producto)">
                     <i class="bi bi-trash"></i>
                   </button>
                 </div>
               </td>
             </tr>
-            } @empty {
-            <tr>
-              <td colspan="6">No hay productos</td>
-            </tr>
-            }
           </tbody>
         </table>
       </div>
+
+      <nav class="mt-3">
+        <ul class="pagination justify-content-center">
+          <li class="page-item">
+            <a class="page-link" (click)="goToPrev()" [class.disabled]="nPage <= 0">Anterior</a>
+          </li>
+          <li class="page-item" *ngFor="let p of arrBotonera">
+            <ng-container *ngIf="p === '...'; else numPage">
+              <span class="page-link disabled">…</span>
+            </ng-container>
+            <ng-template #numPage>
+              <a
+                class="page-link"
+                href="#"
+                (click)="goToPage(p)"
+                [class.active]="nPage === (+p - 1)"
+              >
+                {{ p }}
+              </a>
+            </ng-template>
+          </li>
+          <li class="page-item">
+            <a
+              class="page-link"
+              (click)="goToNext()"
+              [class.disabled]="oPage && nPage >= oPage.totalPages - 1"
+            >
+              Siguiente
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </div>
 </div>
