--- a/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -24,7 +24,7 @@
     </span>
     } @else {
     <span class="navbar-text" style="margin-right: 10px;">
-      <a href="/byemail/{{userEmail}}">{{userEmail}}</a>
+      <a href="/bynif/{{userNif}}">{{userNif}}</a>
     </span>
     <span class="navbar-text">
       <a href="/logout" class="btn btn-outline-primary">Logout</a>
