--- a/src/app/shared/shared.home.routed/shared.home.routed.component.html
+++ b/src/app/shared/shared.home.routed/shared.home.routed.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex align-items-center flex-column mt-5">
   <!-- Masthead Avatar Image-->
-  <img class="mb-3" src="img/logo.webp" width="300" alt="logo">
+  <img class="mb-3" src="assets/img/supermercados-family-cash.png" width="300" alt="logo">
 
   <h1 class="masthead-heading text-uppercase mb-0">PROVEEDORES</h1>
   <p class="masthead-subheading font-weight-light mb-0">Alta de productos de proveedores</p>
